Fix dark mode button Nex example

--- a/src/components/manim-example.scss
+++ b/src/components/manim-example.scss
@@ -66,3 +66,8 @@
         }
     }
 }
+.dark{
+    .next-button{
+        background-color: $button-background-dark;
+    }
+}
